--- a/css/styles.css
+++ b/css/styles.css
@@ -88,52 +88,44 @@ main img {
   width: 100%;
   justify-content: center;
 }
-
-.descripcion {
+main .descripcion {
   padding: 30px;
   background-color: black;
   margin-top: -5px;
 }
-
-.historia {
+main .historia {
   padding: 30px;
   background-color: black;
   margin-top: -5px;
 }
-
-h2 {
+main h2 {
   font-size: 5rem;
   text-align: center;
   color: #D4AF37;
   background-color: black;
 }
-
-p {
+main p {
   font-size: 1.5rem;
   text-align: center;
   color: #ffffff;
   margin-top: 10px;
 }
-
-.aniversario15 {
+main .aniversario15 {
   width: 100%;
   height: 720px;
   justify-content: center;
 }
-
-.videoAniversario {
+main .videoAniversario {
   height: 100%;
   width: 100%;
 }
 
-/*footer*/
-.arriba {
+.footer .arriba {
   font-size: 3rem;
   background-color: black;
   color: #D4AF37;
 }
-
-.aDiv {
+.footer .aDiv {
   color: #D4AF37;
   list-style: none;
   text-decoration: none;
