--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -78,50 +78,52 @@ main{
         width: 100%;
         justify-content: center;
     }
+    .descripcion {
+        padding: 30px;
+        background-color: black;
+        margin-top: -5px;
+    }
+    .historia{
+        padding: 30px;
+        background-color: black;
+        margin-top: -5px;
+    }
+    h2{
+        font-size: 5rem;
+        text-align: center;
+        color: #D4AF37;
+        background-color: black;
+    }
+    p{
+        font-size: 1.5rem;
+        text-align: center;
+        color: #ffffff;
+        margin-top: 10px;
+    }
+    .aniversario15{
+        width: 100%;
+        height: 720px;
+        justify-content: center;
+    }
+    .videoAniversario{
+        height: 100%;
+        width: 100%;
+    
+    }
 }
-.descripcion {
-    padding: 30px;
-    background-color: black;
-    margin-top: -5px;
+.footer{
+    .arriba{
+        font-size: 3rem;
+        background-color: black;
+        color: #D4AF37;
+    }
+    .aDiv{
+        color: #D4AF37;
+        list-style: none;
+        text-decoration: none;
+    }
 }
-.historia{
-    padding: 30px;
-    background-color: black;
-    margin-top: -5px;
-}
-h2{
-    font-size: 5rem;
-    text-align: center;
-    color: #D4AF37;
-    background-color: black;
-}
-p{
-    font-size: 1.5rem;
-    text-align: center;
-    color: #ffffff;
-    margin-top: 10px;
-}
-.aniversario15{
-    width: 100%;
-    height: 720px;
-    justify-content: center;
-}
-.videoAniversario{
-    height: 100%;
-    width: 100%;
 
-}
-/*footer*/
-.arriba{
-    font-size: 3rem;
-    background-color: black;
-    color: #D4AF37;
-}
-.aDiv{
-    color: #D4AF37;
-    list-style: none;
-    text-decoration: none;
-}
 /*Page Historia*/
 .divHistoriaOdyssey{
     padding: 30px;
