--- a/css Backup/styles.css
+++ b/css Backup/styles.css
@@ -11,83 +11,6 @@
   font-size: 62.5%;
 }
 
-@media (max-width: 412px) {
-  h1 {
-    display: flex;
-    flex-direction: column;
-    padding-top: 2%;
-    font-family: "Assassin", serif;
-    font-size: 4rem;
-    text-align: center;
-    background-color: rgb(0, 0, 0);
-    color: blanchedalmond;
-  }
-  /*   #check_menu{
-      display: none; */
-  #check_menu:checked ~ .liUlNavDivHeader {
-    display: flex;
-    background-color: rgba(51, 50, 46, 0.4745098039);
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    left: 0;
-    top: 60%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-  }
-  .navDivHeader label {
-    display: block;
-  }
-  .navDivHeader {
-    width: 100%;
-    display: flex;
-    /*  flex-direction:row; */
-    /*  justify-content: space-around; */
-  }
-  /*  .navDivHeader label{
-          display: block;
-          color: #ffffff ;
-          background-color: rgb(255, 0, 0);
-      } */
-  /*   i{
-      justify-content: center;
-      padding-left: 98%;
-      height: 100%;
-      width: 100%;
-  } */
-  /*  .liUlNavHeader{
-      display: none;
-      margin: 0%;
-  } */
-  .ulNavDivHeader {
-    display: none;
-    /*  padding: 0%; */
-    font-size: 1.15rem;
-    /* width: 100%; */
-    /*  justify-content: space-around; */
-  }
-  .aniversario15 {
-    height: 100%;
-    margin: 0%;
-    padding: 0%;
-  }
-  .sectionFormulario {
-    background-color: black;
-    text-align: center;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-}
-/* @media (min-width: 360px) and (max-width: 700px) {
-    h1{
-        font-family: 'Assassin', serif ;
-        font-size: 6rem;
-        text-align: center;
-        background-color: rgb(126, 36, 96);
-        color: rgb(96, 204, 33);
-    }
-} */
 /*HTML*/
 /* Header */
 header {
@@ -120,7 +43,8 @@ h1 {
 .navDivHeader {
   height: 100%;
 }
-.navDivHeader .ulNavDivHeader {
+
+.ulNavDivHeader {
   padding: 10px;
   text-align: center;
   font-size: 2rem;
@@ -130,20 +54,25 @@ h1 {
   background-color: black;
   /*     display: block; */
 }
-.navDivHeader .ulNavDivHeader .liUlNavHeader {
-  margin-right: 50px;
-}
-.navDivHeader .ulNavDivHeader .liUlNavHeader:hover {
-  background-color: rgb(255, 255, 255);
+
+/*pseudoclases*/
+.liUlNavHeader :hover {
+  background-color: #D4AF37;
   color: black;
   border-radius: 3px;
 }
-.navDivHeader .ulNavDivHeader .liUlNavHeader:active {
+
+.liUlNavHeader :active {
   background-color: rgba(212, 175, 55, 0.8235294118);
   color: rgba(0, 0, 0, 0.829);
   border-radius: 3px;
 }
-.navDivHeader .ulNavDivHeader .liUlNavHeader .aLiUlNavHeader {
+
+.liUlNavHeader {
+  margin-right: 50px;
+}
+
+.aLiUlNavHeader {
   color: #D4AF37;
   text-decoration: none;
   font-family: "Young Serif", serif;
@@ -264,5 +193,82 @@ form {
 }
 
 /*Media quieres*/
+@media (max-width: 412px) {
+  h1 {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2%;
+    font-family: "Assassin", serif;
+    font-size: 4rem;
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: blanchedalmond;
+  }
+  /*   #check_menu{
+      display: none; */
+  #check_menu:checked ~ .liUlNavDivHeader {
+    display: flex;
+    background-color: rgba(51, 50, 46, 0.4745098039);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 60%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  }
+  .navDivHeader label {
+    display: block;
+  }
+  .navDivHeader {
+    width: 100%;
+    display: flex;
+    /*  flex-direction:row; */
+    /*  justify-content: space-around; */
+  }
+  /*  .navDivHeader label{
+          display: block;
+          color: #ffffff ;
+          background-color: rgb(255, 0, 0);
+      } */
+  /*   i{
+      justify-content: center;
+      padding-left: 98%;
+      height: 100%;
+      width: 100%;
+  } */
+  /*  .liUlNavHeader{
+      display: none;
+      margin: 0%;
+  } */
+  .ulNavDivHeader {
+    display: none;
+    /*  padding: 0%; */
+    font-size: 1.15rem;
+    /* width: 100%; */
+    /*  justify-content: space-around; */
+  }
+  .aniversario15 {
+    height: 100%;
+    margin: 0%;
+    padding: 0%;
+  }
+  .sectionFormulario {
+    background-color: black;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+}
+/* @media (min-width: 360px) and (max-width: 700px) {
+    h1{
+        font-family: 'Assassin', serif ;
+        font-size: 6rem;
+        text-align: center;
+        background-color: rgb(126, 36, 96);
+        color: rgb(96, 204, 33);
+    }
+} */
 
 /*# sourceMappingURL=styles.css.map */
