--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,16 +1,9 @@
 /* sass --watch scss:css */
 /*Paramteros Globales*/
 /*desktop*/
-@font-face { 
-    font-family: 'Assassin'; 
-    src: url("../Fonts/Assassin$.ttf"); 
-} 
-*{
-    margin: 0%;
-    padding: 0%;
-    font-size: 62.5%;
-    
-}
+@import"./partials/variables";
+@import"./partials/reset";
+@import"./partials/queries";
 /*HTML*/
 /* Header */
 header{
@@ -38,38 +31,37 @@ h1{
 }
 .navDivHeader{
     height: 100%;
-}
-.ulNavDivHeader{
-    padding: 10px;
-    text-align:center;
-    font-size: 2rem;
-    justify-content: right;
-    display: flex;
-    list-style: none;
-    background-color: black;
-/*     display: block; */
-}
-/*pseudoclases*/
-.liUlNavHeader :hover{
-    background-color:#D4AF37;
-    color: black;
-    border-radius: 3px;
-    }
-    .liUlNavHeader :active{
-        background-color:#d4af37d2;
-        color: rgba(0, 0, 0, 0.829);
-        border-radius: 3px;
-        }
-    .liUlNavHeader{
+    .ulNavDivHeader{
+        padding: 10px;
+        text-align:center;
+        font-size: 2rem;
+        justify-content: right;
+        display: flex;
+        list-style: none;
+        background-color: black;
+    /*     display: block; */
+        .liUlNavHeader {
         margin-right: 50px;
-    
+        &:hover{
+            background-color:rgb(255, 255, 255);
+            color: black;
+            border-radius: 3px;
+            }
+        &:active{
+                background-color:#d4af37d2;
+                color: rgba(0, 0, 0, 0.829);
+                border-radius: 3px;
+            }
+        .aLiUlNavHeader{
+                color: #D4AF37;
+                text-decoration: none;
+                font-family: 'Young Serif', serif;
+                font-size: 2rem;
+            }
+
+        }
     }
-    .aLiUlNavHeader{
-    color: #D4AF37;
-    text-decoration: none;
-    font-family: 'Young Serif', serif;
-    font-size: 2rem;
-    }
+}     
     /* Main */
 main{
     margin-top: -1%;
@@ -178,83 +170,3 @@ form{
     font-size: 3rem;
 }
 /*Media quieres*/
-@media (max-width: 412px) {
-    h1{
-        display:flex ;
-        flex-direction:column;
-        padding-top: 2%;
-        font-family: 'Assassin', serif ;
-        font-size: 4rem;
-        text-align:center;
-        background-color: rgb(0, 0, 0);
-        color: blanchedalmond;
-    }
-
-    /*   #check_menu{
-        display: none; */
-    
-    #check_menu:checked~.liUlNavDivHeader{
-        display: flex;
-        background-color: #33322e79;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        left: 0;
-        top: 60%;
-        flex-direction: column;
-        justify-content: center;
-        align-items: start;
-    }
-    .navDivHeader label{
-    display: block;
-    }
-    .navDivHeader {
-        width: 100%;
-        display: flex;
-       /*  flex-direction:row; */
-       /*  justify-content: space-around; */
-    }
-/*  .navDivHeader label{
-        display: block;
-        color: #ffffff ;
-        background-color: rgb(255, 0, 0);
-    } */
-    /*   i{
-        justify-content: center;
-        padding-left: 98%;
-        height: 100%;
-        width: 100%;
-    } */
-    /*  .liUlNavHeader{
-        display: none;
-        margin: 0%;
-    } */
-    .ulNavDivHeader {
-        display: none;
-       /*  padding: 0%; */
-        font-size: 1.15rem;
-        /* width: 100%; */
-       /*  justify-content: space-around; */
-    }
-    .aniversario15{
-    height: 100%;
-    margin:0%;
-    padding: 0%;
-    }
-    .sectionFormulario{
-        background-color: black;
-        text-align: center;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-}
-
-/* @media (min-width: 360px) and (max-width: 700px) {
-    h1{
-        font-family: 'Assassin', serif ;
-        font-size: 6rem;
-        text-align: center;
-        background-color: rgb(126, 36, 96);
-        color: rgb(96, 204, 33);
-    }
-} */
