--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   font-size: 62.5%;
 }
 
-@media (max-width: 412px) {
+@media (max-width: 768px) {
   h1 {
     display: flex;
     flex-direction: column;
@@ -22,72 +22,75 @@
     background-color: rgb(0, 0, 0);
     color: blanchedalmond;
   }
-  /*   #check_menu{
-      display: none; */
-  #check_menu:checked ~ .liUlNavDivHeader {
-    display: flex;
-    background-color: rgba(51, 50, 46, 0.4745098039);
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    left: 0;
-    top: 60%;
+}
+/* MENU MOBILE */
+.navDivHeader ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.navDivHeader ul li {
+  margin: 0;
+  padding: 0;
+}
+.navDivHeader ul a {
+  text-decoration: none;
+  color: #fff;
+}
+@media (max-width: 768px) {
+  .navDivHeader ul {
+    display: none;
     flex-direction: column;
-    justify-content: center;
-    align-items: start;
+    text-align: center;
   }
-  .navDivHeader label {
+  .navDivHeader ul #check_menu {
     display: block;
   }
-  .navDivHeader {
-    width: 100%;
-    display: flex;
-    /*  flex-direction:row; */
-    /*  justify-content: space-around; */
+  .navDivHeader ul .bx-menu {
+    display: block;
   }
-  /*  .navDivHeader label{
-          display: block;
-          color: #ffffff ;
-          background-color: rgb(255, 0, 0);
-      } */
-  /*   i{
-      justify-content: center;
-      padding-left: 98%;
-      height: 100%;
-      width: 100%;
-  } */
-  /*  .liUlNavHeader{
-      display: none;
-      margin: 0%;
-  } */
-  .ulNavDivHeader {
-    display: none;
-    /*  padding: 0%; */
-    font-size: 1.15rem;
-    /* width: 100%; */
-    /*  justify-content: space-around; */
-  }
-  .aniversario15 {
-    height: 100%;
-    margin: 0%;
-    padding: 0%;
-  }
-  .sectionFormulario {
-    background-color: black;
-    text-align: center;
-    flex-direction: column;
-    justify-content: space-around;
+  .navDivHeader ul li {
+    margin-bottom: 10px;
   }
 }
-/* @media (min-width: 360px) and (max-width: 700px) {
-    h1{
-        font-family: 'Assassin', serif ;
-        font-size: 6rem;
-        text-align: center;
-        background-color: rgb(126, 36, 96);
-        color: rgb(96, 204, 33);
-    }
-} */
+
+.contenedorDeGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "header header header" "main main main" "main main main" "main main main" "footer footer footer";
+}
+
+.header {
+  grid-area: header;
+}
+
+.main {
+  grid-area: main;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+@media (max-width: 412px) {
+  .contenedorDeGrid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header " "main main" "main main" "main main " "footer ";
+  }
+  .header {
+    grid-area: header;
+  }
+  .main {
+    grid-area: main;
+  }
+  .footer {
+    grid-area: footer;
+  }
+}
 /*HTML*/
 /* Header */
 header {
@@ -238,15 +241,37 @@ main .videoAniversario {
 }
 
 /*Page Contacto*/
+/* .sectionFormulario{
+    background-color: black;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+}
+.sectionFormulario h2{
+    text-align:start;
+}
+.formulario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: black;
+}
+form{
+    justify-content: center;
+    color: #D4AF37;
+    background-color: black;
+    font-size: 3rem;
+} */
 .sectionFormulario {
   background-color: black;
   text-align: center;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
 }
-
 .sectionFormulario h2 {
-  text-align: start;
+  text-align: left;
+  font-size: 2rem;
 }
 
 .formulario {
@@ -254,13 +279,32 @@ main .videoAniversario {
   flex-direction: column;
   justify-content: center;
   background-color: black;
+  padding: 20px;
 }
-
-form {
-  justify-content: center;
+.formulario label {
   color: #D4AF37;
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+}
+.formulario input,
+.formulario select,
+.formulario textarea {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #D4AF37;
+  border-radius: 5px;
   background-color: black;
-  font-size: 3rem;
+  color: #D4AF37;
+  width: 100%;
+  font-size: 2rem;
+}
+.formulario textarea {
+  resize: vertical;
+}
+.formulario input[type=submit] {
+  background-color: #D4AF37;
+  color: black;
+  cursor: pointer;
 }
 
 /*Media quieres*/
