--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -1,4 +1,4 @@
-@media (max-width: 412px) {
+@media (max-width: 768px) {
     h1{
         display:flex ;
         flex-direction:column;
@@ -8,73 +8,55 @@
         text-align:center;
         background-color: rgb(0, 0, 0);
         color: blanchedalmond;
+    } 
+}
+/* MENU MOBILE */
+
+.navDivHeader {
+    
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        li {
+            margin: 0;
+            padding: 0;
+            
+            // Estilos generales para los elementos del menú
+        }
+
+        a {
+            text-decoration: none;
+            color: #fff;
+            
+            // Estilos generales para los enlaces del menú
+        }
+        
     }
 
-    /*   #check_menu{
-        display: none; */
+    // Estilos para pantallas pequeñas (por ejemplo, dispositivos móviles)
+    @media (max-width: 768px) {
+        ul {
+            display: none;
+            flex-direction: column;
+            text-align: center;
+            #check_menu {
+                display: block; // Muestra el checkbox para la vista mobile
+            }
     
-    #check_menu:checked~.liUlNavDivHeader{
-        display: flex;
-        background-color: #33322e79;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        left: 0;
-        top: 60%;
-        flex-direction: column;
-        justify-content: center;
-        align-items: start;
-    }
-    .navDivHeader label{
-    display: block;
-    }
-    .navDivHeader {
-        width: 100%;
-        display: flex;
-       /*  flex-direction:row; */
-       /*  justify-content: space-around; */
-    }
-/*  .navDivHeader label{
-        display: block;
-        color: #ffffff ;
-        background-color: rgb(255, 0, 0);
-    } */
-    /*   i{
-        justify-content: center;
-        padding-left: 98%;
-        height: 100%;
-        width: 100%;
-    } */
-    /*  .liUlNavHeader{
-        display: none;
-        margin: 0%;
-    } */
-    .ulNavDivHeader {
-        display: none;
-       /*  padding: 0%; */
-        font-size: 1.15rem;
-        /* width: 100%; */
-       /*  justify-content: space-around; */
-    }
-    .aniversario15{
-    height: 100%;
-    margin:0%;
-    padding: 0%;
-    }
-    .sectionFormulario{
-        background-color: black;
-        text-align: center;
-        flex-direction: column;
-        justify-content: space-around;
+            .bx-menu {
+                display: block; // Muestra el ícono del menú para la vista mobile
+            }
+            li {
+                margin-bottom: 10px;
+                // Ajusta el espacio entre elementos del menú
+            }
+        }
+
+        // Estilos adicionales para el menú en pantallas pequeñas
     }
 }
-
-/* @media (min-width: 360px) and (max-width: 700px) {
-    h1{
-        font-family: 'Assassin', serif ;
-        font-size: 6rem;
-        text-align: center;
-        background-color: rgb(126, 36, 96);
-        color: rgb(96, 204, 33);
-    }
-} */
