agregando modificaciones en navbar en el formulario de la pagina contacto

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,10 @@ header {
 
 header .header {
   width: 100%;
-  height: 60px;
+  height: 100%;
+}
+header .header .divHeader {
+  /* width: 50px; */
 }
 header .header .containerLogo .imgLogo {
   width: 50px;
@@ -108,6 +111,7 @@ header .header .containerLogo .imgLogo {
 }
 
 h1 {
+  height: 100%;
   font-family: "Assassin", serif;
   font-size: 6rem;
   text-align: center;
@@ -137,9 +141,7 @@ h1 {
   margin-right: 50px;
 }
 .navDivHeader .ulNavDivHeader .liUlNavHeader:hover {
-  background-color: rgb(255, 255, 255);
-  color: black;
-  border-radius: 3px;
+  background-image: linear-gradient(to right, #000000, #331d1f, #62342e, #8e5135, #b47536, #b47536, #b47536, #b47536, #8e5135, #62342e, #331d1f, #000000);
 }
 .navDivHeader .ulNavDivHeader .liUlNavHeader:active {
   background-color: rgba(212, 175, 55, 0.8235294118);
@@ -263,6 +265,7 @@ form{
     font-size: 3rem;
 } */
 .sectionFormulario {
+  margin-top: 15px;
   background-color: black;
   text-align: center;
   display: flex;
@@ -271,7 +274,7 @@ form{
 }
 .sectionFormulario h2 {
   text-align: left;
-  font-size: 2rem;
+  font-size: 5rem;
 }
 
 .formulario {
@@ -280,6 +283,8 @@ form{
   justify-content: center;
   background-color: black;
   padding: 20px;
+  color: #D4AF37;
+  font-size: 4rem;
 }
 .formulario label {
   color: #D4AF37;
@@ -289,6 +294,7 @@ form{
 .formulario input,
 .formulario select,
 .formulario textarea {
+  margin-top: 10px;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #D4AF37;
