--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -6,5 +6,7 @@
     margin: 0%;
     padding: 0%;
     font-size: 62.5%;
-    
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
