--- a/css/styles.css
+++ b/css/styles.css
@@ -14,18 +14,18 @@
   box-sizing: border-box;
 }
 
-@media (min-width: 768px) {
-  h1 {
-    display: flex;
-    flex-direction: column;
-    padding-top: 2%;
-    font-family: "Assassin", serif;
-    font-size: 4rem;
-    text-align: center;
-    background-color: rgb(0, 0, 0);
-    color: blanchedalmond;
-  }
-}
+/* @media (min-width: 768px) {
+    h1{
+        display:flex ;
+        flex-direction:column;
+        padding-top: 2%;
+        font-family: 'Assassin', serif ;
+        font-size: 4rem;
+        text-align:center;
+        background-color: rgb(0, 0, 0);
+        color: blanchedalmond;
+    } 
+} */
 /* MENU MOBILE */
 @media (max-width: 768px) {
   .content {
@@ -47,6 +47,42 @@
   }
   .content .menu .navBar li {
     width: 100%;
+  }
+  .content .menu #menu:checked ~ .navBar {
+    display: initial;
+  }
+}
+@media (max-width: 412px) {
+  .content {
+    min-height: 30px;
+  }
+  .content .menu {
+    top: 0;
+    padding: 5px;
+  }
+  .content .menu .logoTitulo {
+    display: flex;
+    flex-direction: column;
+  }
+  .content .menu .logoTitulo .imgLogo {
+    height: 70px;
+    width: 50px;
+  }
+  .content .menu .logoTitulo span {
+    font-size: 5rem;
+  }
+  .content .menu label {
+    display: initial;
+  }
+  .content .menu .navBar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    display: none;
+  }
+  .content .menu .navBar li {
+    width: auto;
   }
   .content .menu #menu:checked ~ .navBar {
     display: initial;
@@ -190,7 +226,7 @@ header .menu .navBar ul li:active {
 
 /* Main */
 main {
-  margin-top: -1%;
+  background-color: black;
 }
 main img {
   height: 100%;
@@ -200,12 +236,10 @@ main img {
 main .descripcion {
   padding: 30px;
   background-color: black;
-  margin-top: -5px;
 }
 main .historia {
   padding: 30px;
   background-color: black;
-  margin-top: -5px;
 }
 main h2 {
   font-size: 5rem;
