--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     h1{
         display:flex ;
         flex-direction:column;
@@ -9,7 +9,7 @@
         background-color: rgb(0, 0, 0);
         color: blanchedalmond;
     } 
-}
+} */
 /* MENU MOBILE */
 
 // Media query para estilos específicos en pantallas más pequeñas
@@ -19,8 +19,10 @@
     .menu {
       top:0;
       padding: 20px;
+      
       label {
         display: initial;
+        
     }
     .navBar{
       position: absolute;
@@ -28,17 +30,60 @@
         left: 0;
         right: 0;
         display: none;
+        
         li {
         width: 100%;
+        
+        
     }
-    }    
+    }   
     #menu:checked ~ .navBar {
       display: initial;
   }
   }
 }
 }
-
+@media (max-width:412px) {
+  .content {
+    min-height: 30px;
+    .menu {
+      top:0;
+      padding: 5px;
+      .logoTitulo{
+        display: flex;
+        flex-direction: column;
+        .imgLogo{
+          height: 70px;
+          width: 50px;
+        }
+        span{
+          font-size: 5rem;
+        }
+      }
+      
+      label {
+        display: initial;
+        
+    }
+    .navBar{
+      position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        display: none;
+        
+        li {
+        width: auto;
+        
+        
+    }
+    }   
+    #menu:checked ~ .navBar {
+      display: initial;
+  }
+  }
+}
+}
   
 /*     @media (max-width: 412px) {
         .contenedorDeGrid {
