--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -37,7 +37,7 @@ header {
         }
     }
     .menu{
-        height: 100%;
+        height: auto;
         justify-content: center;
         display: flex;
         flex-direction: column;
