--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,58 @@
     } 
 } */
 /* MENU MOBILE */
+@media (max-width: 914px) {
+  .content {
+    min-height: 30px;
+  }
+  .content .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    top: 10px;
+    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+  .content .menu .logoTitulo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .content .menu .logoTitulo .imgLogo {
+    height: 70px;
+    width: 50px;
+    margin: 10px;
+  }
+  .content .menu .logoTitulo span {
+    font-size: 5rem;
+  }
+  .content .menu label {
+    display: initial;
+  }
+  .content .menu .container-fluid {
+    margin: auto;
+    padding-bottom: 10px;
+  }
+  .content .menu .navBar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    display: none;
+  }
+  .content .menu .navBar ul {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .content .menu .navBar li {
+    width: auto;
+    margin: 0%;
+  }
+  .content .menu #menu:checked ~ .navBar {
+    display: initial;
+  }
+}
 @media (max-width: 768px) {
   .content {
     min-height: 70px;
@@ -57,8 +109,12 @@
     min-height: 30px;
   }
   .content .menu {
-    top: 0;
-    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    top: 10px;
+    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 10px;
   }
   .content .menu .logoTitulo {
     display: flex;
@@ -74,6 +130,10 @@
   .content .menu label {
     display: initial;
   }
+  .content .menu .container-fluid {
+    margin: auto;
+    padding-bottom: 10px;
+  }
   .content .menu .navBar {
     position: absolute;
     top: 100%;
@@ -81,29 +141,34 @@
     right: 0;
     display: none;
   }
+  .content .menu .navBar ul {
+    flex-direction: column;
+    justify-content: space-around;
+  }
   .content .menu .navBar li {
     width: auto;
+    margin: 0%;
   }
   .content .menu #menu:checked ~ .navBar {
     display: initial;
   }
 }
-/*     @media (max-width: 412px) {
-        .contenedorDeGrid {
-          display: grid;
-          grid-template-columns: repeat(1, 1fr);
-          grid-template-areas: "header " "main main" "main main" "main main " "footer ";
-        }
-        .header {
-          grid-area: header;
-        }
-        .main {
-          grid-area: main;
-        }
-        .footer {
-          grid-area: footer;
-        }
-      } */
+@media (max-width: 412px) {
+  .contenedorDeGrid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header " "main main" "main main" "main main " "footer ";
+  }
+  .header {
+    grid-area: header;
+  }
+  .main {
+    grid-area: main;
+  }
+  .footer {
+    grid-area: footer;
+  }
+}
 .contenedorDeGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -168,7 +233,7 @@ header .container-fluid span {
   height: 100%;
 }
 header .menu {
-  height: 100%;
+  height: auto;
   justify-content: center;
   display: flex;
   flex-direction: column;
