--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -72,24 +72,47 @@
 }
 @media (max-width:768px) {
   .content {
-    min-height: 70px;
-    .menu {
-      top:0;
-      padding: 20px;
+    min-height: 30px;
+        .menu {
+          display: flex;
+          flex-direction: column;
+         /*  top:10px;
+          padding: 0 ;
+          padding-top: 20px;
+          padding-bottom: 10px; */
+      .logoTitulo{
+        display: flex;
+        flex-direction: column;
+        .imgLogo{
+          height: 70px;
+          width: 50px;
+        }
+        span{
+          font-size: 5rem;
+        }
+      }
       
       label {
         display: initial;
         
     }
+    .container-fluid {
+      margin: auto;
+      padding-bottom: 10px;
+  }
     .navBar{
       position: absolute;
         top: 100%;
         left: 0;
         right: 0;
         display: none;
-        
+        ul{
+          flex-direction: column;
+          justify-content: space-around;
+        }
         li {
-        width: 100%;
+        width: auto;
+        margin: 0%;
         
         
     }
@@ -106,10 +129,10 @@
         .menu {
           display: flex;
           flex-direction: column;
-      top:10px;
-      padding: 0 ;
-      padding-top: 20px;
-      padding-bottom: 10px;
+          top:10px;
+          padding: 0 ;
+          padding-top: 20px;
+          padding-bottom: 10px;
       .logoTitulo{
         display: flex;
         flex-direction: column;
