--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -76,10 +76,10 @@
         .menu {
           display: flex;
           flex-direction: column;
-         /*  top:10px;
+          top:10px;
           padding: 0 ;
           padding-top: 20px;
-          padding-bottom: 10px; */
+          padding-bottom: 10px;
       .logoTitulo{
         display: flex;
         flex-direction: column;
